--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "clsx": "^2.1.1",
     "graphql": "^15.5.1",
     "headroom.js": "^0.12.0",
+    "i18next": "^23.16.2",
     "moment": "^2.29.1",
     "next": "^14.2.15",
+    "next-i18next": "^15.3.1",
     "nouislider": "^15.2.0",
     "react": "^18.2.0",
     "react-datetime": "^3.0.4",
@@ -33,11 +35,12 @@
     "react-dotenv": "^0.1.3",
     "react-easy-emoji": "^1.8.1",
     "react-headroom": "^3.1.1",
+    "react-i18next": "^15.0.3",
     "react-lottie": "^1.2.3",
     "react-reveal": "^1.2.2",
     "react-scripts": "^5.0.1",
     "react-typist": "^2.0.5",
-    "reactstrap": "^8.9.0",
+    "reactstrap": "^9.2.3",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.4"
   },
